--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,149 @@
-.App {
-  text-align: center;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+background: linear-gradient(
+    90deg,
+    rgb(255, 16, 16) 0%,
+    rgb(54, 71, 228) 100%
+);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.todo-app {
+display: flex;
+flex-direction: column;
+justify-content: start;
+width: 520px;
+min-height: 600px;
+background: #161a2b;
+text-align: center;
+margin: 128px auto;
+border-radius: 10px;
+padding-bottom: 32px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1 {
+margin: 32px 0;
+color: rgb(168, 104, 104);
+font-size: 24px;
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.complete {
+text-decoration: line-through;
+opacity: 0.4;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-form {
+margin-bottom: 32px;
+}
+
+.todo-input {
+padding: 14px 32px 14px 16px;
+border-radius: 4px 0 0 4px;
+border: 2px solid #f81212;
+outline: none;
+width: 320px;
+background: transparent;
+color: rgb(168, 104, 104);
+}
+
+.todo-input::placeholder {
+color: rgb(168, 104, 104);
+}
+
+.todo-button {
+padding: 16px;
+border: none;
+border-radius: 0 4px 4px 0;
+cursor: pointer;
+outline: none;
+background: linear-gradient(
+    90deg,
+    rgb(255, 12, 12) 0%,
+    rgb(46, 0, 250) 100%
+);
+color: #fff;
+text-transform: capitalize;
+}
+
+.todo-input.edit {
+border: 2px solid #149fff;
+}
+
+.todo-button.edit {
+background: linear-gradient(
+    90deg,
+    rgba(20, 159, 255, 1) 0%,
+    rgba(17, 122, 255, 1) 100%
+);
+padding: 16px 22px;
+}
+
+.todo-container {
+display: flex;
+flex-direction: row;
+position: relative;
+}
+
+.todo-row {
+display: flex;
+justify-content: space-between;
+align-items: center;
+margin: 4px auto;
+color: #fff;
+background: linear-gradient(
+    90deg,
+    rgba(255, 118, 20, 1) 0%,
+    rgb(17, 255, 17) 100%
+);
+
+padding: 16px;
+border-radius: 5px;
+width: 90%;
+}
+
+.todo-row:nth-child(4n + 1) {
+background: linear-gradient(
+    90deg,
+    rgb(12, 255, 182) 0%,
+    rgb(0, 67, 250) 100%
+);
+}
+
+.todo-row:nth-child(4n + 2) {
+background: linear-gradient(
+    90deg,
+    rgb(255, 231, 12) 0%,
+    rgb(245, 42, 150) 100%
+);
+}
+
+.todo-row:nth-child(4n + 3) {
+background: linear-gradient(
+    90deg,
+    rgb(255, 20, 20) 0%,
+    rgb(160, 17, 255) 100%
+);
+}
+
+.icons {
+display: flex;
+align-items: center;
+font-size: 24px;
+cursor: pointer;
+}
+
+.delete-icon {
+margin-right: 5px;
+color: #fff;
+}
+
+.edit-icon {
+color: #fff;
 }
